# armory

./: MyProcessServer.c  README.md  dine.c
access_mysql/inc/: debug_print.h
access_mysql/src/: access_mysql.c
boring_review/punk_queue/: punk_queue.c  punk_queue.h
boring_review/simple_string/: CMakeLists.txt  main_test.cpp  simple_string.cpp  simple_string.h
boring_tools/: CMakeLists.txt  README.md  boring_tools.h  byte_convert  number_convert
boring_tools/inc/: boring_tools.h
boring_tools/linux/: files_by_date.sh
boring_tools/mac/: sync_changetime.sh
boring_tools/qqwry2txt/: qqwry2txt.c
boring_tools/shell_script/: copy_rely_library.sh  dump_debug_info.sh  expect_login.sh  files_by_date.sh  name_extension.sh  release_prot.sh  sshpass_login.sh  traffic_control.sh
boring_tools/src/: boring_tools.c  main_test.c
classic_sort/: CMakeLists.txt
classic_sort/inc/: classic_sort.h
common/: cas_queue.hpp  debug_print.h  http_peek.c  http_peek.h  mutual_sem.c  mutual_sem.h  utils_daemon.c  utils_daemon.h  utils_library.c  utils_library.h  utils_singleton.c  utils_singleton.h
dictionary/: Makefile  README.md  dictionary.go  dictionary_db.go  go.mod  go.sum  main.go  wd
formatted_text/: CMakeLists.txt
formatted_text/file/: text
formatted_text/inc/: formatted_text.h
formatted_text/src/: formatted_text.cpp  main_test.cpp
function/: cache_part.c  cache_part.h  dynamic_array.c  dynamic_array.h  mutual_sem.c  mutual_sem.h  punk_queue.c  punk_queue.h
information_station/: Makefile  make.env
iplib_tools/: README.md
link_list/: CMakeLists.txt
upload_whith_curl/: CMakeLists.txt
upload_whith_curl/inc/: upload_whith_curl.h
upload_whith_curl/src/: upload_whith_curl.cpp
(+36 files in other folders)
